--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,16 @@ services:
       POSTGRES_DB: boostar_deck
     ports:
       - 5432:5432
-      
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:11.0.3
+    restart: always
+    environment:
+      KEYCLOAK_USER: ${KEYCLOAK_USER}
+      KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
+    ports:
+      - 8080:8080 
+
   adminer:
     image: adminer:4.7.7-standalone
     restart: always
