--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,46 @@
 asgiref==3.3.1
 astroid==2.4.2
+beautifulsoup4==4.9.3
 certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==3.2.1
+defusedxml==0.7.0rc1
 Django==3.1.3
 django-keycloak @ git+https://github.com/Peter-Slump/django-keycloak.git@5211fba26ae4216b4344309eb4a67da9745ada05
+django-templated-mail==1.1.1
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
 ecdsa==0.14.1
 idna==2.10
 isort==5.6.4
+itypes==1.2.0
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
+oauthlib==3.1.0
 psycopg2==2.8.6
 pyasn1==0.4.8
+pycparser==2.20
+PyJWT==1.7.1
 pylint==2.6.0
 python-dotenv==0.15.0
 python-jose==3.2.0
 python-keycloak-client==0.2.3
+python3-openid==3.2.0
 pytz==2020.4
 requests==2.24.0
+requests-oauthlib==1.3.0
 rsa==4.6
 six==1.15.0
+social-auth-app-django==4.0.0
+social-auth-core==3.3.3
+soupsieve==2.0.1
 sqlparse==0.4.1
 toml==0.10.2
+uritemplate==3.0.1
 urllib3==1.25.11
 wrapt==1.12.1
