--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ Django==3.1.3
 django-keycloak @ git+https://github.com/Peter-Slump/django-keycloak.git@5211fba26ae4216b4344309eb4a67da9745ada05
 djangorestframework==3.12.2
 ecdsa==0.14.1
+factory-boy==3.1.0
+Faker==4.18.0
 idna==2.10
 isort==5.6.4
 lazy-object-proxy==1.4.3
@@ -13,6 +15,7 @@ mccabe==0.6.1
 psycopg2==2.8.6
 pyasn1==0.4.8
 pylint==2.6.0
+python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-jose==3.2.0
 python-keycloak-client==0.2.3
@@ -21,6 +24,7 @@ requests==2.24.0
 rsa==4.6
 six==1.15.0
 sqlparse==0.4.1
+text-unidecode==1.3
 toml==0.10.2
 urllib3==1.25.11
 wrapt==1.12.1
