--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-DBPASSWORD=password
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=bostardeck
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=admin
