--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,76 @@
+alabaster==0.7.12
+appdirs==1.4.4
 asgiref==3.3.1
 astroid==2.4.2
+attrs==20.3.0
+Babel==2.9.0
+black==20.8b1
 certifi==2020.11.8
 chardet==3.0.4
+click==7.1.2
+coverage==5.3
 Django==3.1.3
 django-keycloak @ git+https://github.com/Peter-Slump/django-keycloak.git@5211fba26ae4216b4344309eb4a67da9745ada05
 djangorestframework==3.12.2
+docutils==0.16
 ecdsa==0.14.1
 factory-boy==3.1.0
-Faker==4.18.0
+Faker==0.9.1
+fancycompleter==0.9.1
 idna==2.10
+imagesize==1.2.0
+iniconfig==1.1.1
 isort==5.6.4
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+livereload==2.6.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
+mixer==6.1.3
+mypy==0.790
+mypy-extensions==0.4.3
+packaging==20.7
+pathspec==0.8.1
+pdbpp==0.10.2
+pipdeptree==1.0.0
+pluggy==0.13.1
 psycopg2==2.8.6
+py==1.9.0
 pyasn1==0.4.8
+Pygments==2.7.2
 pylint==2.6.0
+pyparsing==2.4.7
+pyrepl==0.9.0
+pytest==6.1.2
+pytest-cov==2.10.1
+pytest-django==4.1.0
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-jose==3.2.0
 python-keycloak-client==0.2.3
 pytz==2020.4
+regex==2020.11.13
 requests==2.24.0
+rope==0.18.0
 rsa==4.6
+rstcheck==3.3.1
 six==1.15.0
+snowballstemmer==2.0.0
+Sphinx==3.3.1
+sphinx-autobuild==2020.9.1
+sphinx-rtd-theme==0.5.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.4.1
-text-unidecode==1.3
+text-unidecode==1.2
 toml==0.10.2
+tornado==6.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 urllib3==1.25.11
+wmctrl==0.3
 wrapt==1.12.1
