--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,10 @@ services:
     image: postgres:13.1
     restart: always
     environment:
-      POSTGRES_PASSWORD: ${DBPASSWORD}
-      POSTGRES_DB: bostar_deck
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - 5432:5432
+      - ${POSTGRES_PORT}:5432
 
   keycloak:
     image: quay.io/keycloak/keycloak:11.0.3
