--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,138 @@
 alabaster==0.7.12
+ansible==2.10.4
+ansible-base==2.10.3
 appdirs==1.4.4
+arrow==0.17.0
 asgiref==3.3.1
+asn1crypto==1.4.0
 astroid==2.4.2
 attrs==20.3.0
 Babel==2.9.0
+bcrypt==3.2.0
+binaryornot==0.4.4
 black==20.8b1
+Brlapi==0.8.0
+btrfsutil==5.9
+CacheControl==0.12.6
+cached-property==1.5.2
+ceph==1.0.0
+ceph-volume==1.0.0
+cephfs==2.0.0
+cephfs-shell==0.0.1
+Cerberus==1.3.2
 certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
-coverage==5.3
-Django==3.1.3
+click-completion==0.5.2
+click-help-colors==0.9
+colorama==0.4.4
+commonmark==0.9.1
+contextlib2==0.6.0.post1
+cookiecutter==1.7.2
+cryptography==3.2.1
+cupshelpers==1.0
+cycler==0.10.0
+decorator==4.4.2
+distlib==0.3.1
+distro==1.5.0
+Django==3.1.4
 django-keycloak @ git+https://github.com/Peter-Slump/django-keycloak.git@5211fba26ae4216b4344309eb4a67da9745ada05
 djangorestframework==3.12.2
+docker==4.4.0
+docker-compose==1.27.4
+docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
 docutils==0.16
 ecdsa==0.14.1
+enrich==1.2.3
 factory-boy==3.1.0
-Faker==0.9.1
-fancycompleter==0.9.1
+Faker==4.18.0
+filelock==3.0.12
+Flask-Sphinx-Themes==1.0.2.dev20201112
+future==0.18.2
+html5lib==1.1
 idna==2.10
 imagesize==1.2.0
-iniconfig==1.1.1
+importlib-metadata==3.1.1
+isc==2.0
 isort==5.6.4
 Jinja2==2.11.2
+jinja2-time==0.2.0
+jsonschema==3.2.0
+kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
-livereload==2.6.3
+lensfun==0.3.95
+libvirt-python==6.4.0
+louis==3.15.0
 MarkupSafe==1.1.1
+matplotlib==3.3.3
 mccabe==0.6.1
-mixer==6.1.3
+molecule==3.2.0
+molecule-podman==0.3.0
+molecule-vagrant==0.2
+msgpack==1.0.0
 mypy==0.790
 mypy-extensions==0.4.3
+netsnmp-python==1.0a1
+numpy==1.19.4
+opencv-python==4.4.0.46
+ordered-set==4.0.2
 packaging==20.7
+paramiko==2.7.2
 pathspec==0.8.1
-pdbpp==0.10.2
+pep517==0.9.1
+Pillow==8.0.1
 pipdeptree==1.0.0
 pluggy==0.13.1
+ply==3.11
+podman-compose==0.1.5
+poyo==0.5.0
+progress==1.5
+psutil==5.7.3
 psycopg2==2.8.6
-py==1.9.0
+pwquality==1.4.4
+pyaml==20.4.0
 pyasn1==0.4.8
-Pygments==2.7.2
+pybind11==2.6.0
+pycairo==1.20.0
+pycparser==2.20
+pycups==2.0.1
+pycurl==7.43.0.6
+Pygments==2.7.3
+PyGObject==3.38.0
 pylint==2.6.0
+PyNaCl==1.4.0
+pyOpenSSL==20.0.0
 pyparsing==2.4.7
-pyrepl==0.9.0
-pytest==6.1.2
-pytest-cov==2.10.1
-pytest-django==4.1.0
+pyrsistent==0.17.3
+pyte==0.8.0
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-jose==3.2.0
 python-keycloak-client==0.2.3
+python-slugify==4.0.1
+python-vagrant==0.5.15
 pytz==2020.4
+PyYAML==5.3.1
+rados==2.0.0
+ranger-fm==1.9.3
+rbd==2.0.0
 regex==2020.11.13
 requests==2.24.0
-rope==0.18.0
+resolvelib==0.5.3
+retrying==1.3.3
+rgw==2.0.0
+rich==9.3.0
 rsa==4.6
 rstcheck==3.3.1
+selinux==0.2.1
+sh==1.14.1
+shellingham==1.3.1
 six==1.15.0
 snowballstemmer==2.0.0
 Sphinx==3.3.1
-sphinx-autobuild==2020.9.1
 sphinx-rtd-theme==0.5.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
@@ -66,11 +141,25 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.4.1
-text-unidecode==1.2
+sshuttle==1.0.4
+subprocess-tee==0.1.6
+tabulate==0.8.7
+team==1.0
+text-unidecode==1.3
+texttable==1.6.3
+thefuck==3.30
 toml==0.10.2
-tornado==6.1
+tqdm==4.54.1
+tree-format==0.1.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 urllib3==1.25.11
-wmctrl==0.3
+virtualenv==20.2.1
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==0.57.0
+whichcraft==0.6.1
 wrapt==1.12.1
+wxPython==4.0.7.post2
+yamllint==1.25.0
+zipp==3.4.0
