--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,10 +19,14 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Install dependencies
+      - name: Install pipenv
         run: |
-          python -m pip install -r requirements.txt
+          pip install pipenv
+
+      - name: Install dependency
+        run: |
+          pipenv install --dev
 
       - name: Run django test
         run: |
-          py.test
+          pipenv run py.test
