--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,7 +5,6 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
    test:
     runs-on: ubuntu-latest
@@ -19,24 +18,18 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Install pipenv, libpq, and pandoc
+      - name: Install tox
         run: |
-          sudo apt-get install libpq-dev -y
-          pip install pipenv
+          pip install tox
 
       - name: Cache requirements
         uses: actions/cache@v2
-        id: cache-pipenv
+        id: cache-tox
         with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-virtualenvs-${{ hashFiles('**/Pipfile.lock') }}
+          path: ${{ github.workspace }}/.tox
+          key: ${{ runner.os }}-tox-${{ hashFiles('**/Pipfile.lock') }}${{hashFiles('**/tox.ini') }}
           restore-keys: |
-            ${{ runner.os }}-virtualenvs-
-
-      - name: Install dependency
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
-        run: |
-          pipenv install --dev
+            ${{ runner.os }}-tox-
 
       - name: create .env
         run: |
@@ -44,4 +37,70 @@ jobs:
 
       - name: Run django test
         run: |
-          pipenv run py.test
+          tox -e test
+
+   lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install tox
+        run: |
+          pip install tox
+
+      - name: Cache requirements
+        uses: actions/cache@v2
+        id: cache-tox
+        with:
+          path: ${{ github.workspace }}/.tox
+          key: ${{ runner.os }}-tox-${{ hashFiles('**/Pipfile.lock') }}${{hashFiles('**/tox.ini') }}
+          restore-keys: |
+            ${{ runner.os }}-tox-
+
+      - name: create .env
+        run: |
+          cp .env.example .env
+
+      - name: Run django test
+        run: |
+          tox -e lint
+
+   format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install tox
+        run: |
+          pip install tox
+
+      - name: Cache requirements
+        uses: actions/cache@v2
+        id: cache-tox
+        with:
+          path: ${{ github.workspace }}/.tox
+          key: ${{ runner.os }}-tox-${{ hashFiles('**/Pipfile.lock') }}${{hashFiles('**/tox.ini') }}
+          restore-keys: |
+            ${{ runner.os }}-tox-
+
+      - name: create .env
+        run: |
+          cp .env.example .env
+
+      - name: Run django test
+        run: |
+          tox -e format
