[ISS-101] Fix comand call
Comand suposed to be called in virtualenv

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Pylint check
         run: |
+          pipenv shell
           apps_names=$(find . -maxdepth 1  -name "*" -type d -not -name '.*')  
           for i in $apps_names; do
           pylint $i
@@ -47,7 +48,7 @@ jobs:
 
       - name: Black reformat check
         run: |
-          black --check . --exclude 'migrations|manage.py'
+          pipenv run black --check . --exclude 'migrations|manage.py'
 
       - name: Run django test
         run: |
