--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,11 +19,22 @@ jobs:
         with:
           python-version: 3.8
 
+      - name: Cache requirements
+        uses: actions/cache@v2
+        id: cache-pipenv
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pipenv-
+
       - name: Install pipenv
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pip install pipenv
 
       - name: Install dependency
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pipenv install --dev
 
