--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,19 +38,79 @@ jobs:
         run: |
           pipenv install --dev
 
+      - name: Run django test
+        run: |
+          pipenv run py.test
+
+   pylint-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install pipenv, libpq, and pandoc
+        run: |
+          sudo apt-get install libpq-dev -y
+          pip install pipenv
+
+      - name: Cache requirements
+        uses: actions/cache@v2
+        id: cache-pipenv
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-virtualenvs-${{ hashFiles('**/Pipfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-virtualenvs-
+
+      - name: Install dependency
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
+          pipenv install --dev
+
       - name: Pylint check
-        continue-on-error: True
         run: |
           apps_names=$(find . -maxdepth 1  -name "*" -type d -not -name '.*')  
           for i in $apps_names; do
           pipenv run pylint $i
           done
 
+   black-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install pipenv, libpq, and pandoc
+        run: |
+          sudo apt-get install libpq-dev -y
+          pip install pipenv
+
+      - name: Cache requirements
+        uses: actions/cache@v2
+        id: cache-pipenv
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-virtualenvs-${{ hashFiles('**/Pipfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-virtualenvs-
+
+      - name: Install dependency
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
+          pipenv install --dev
+
       - name: Black reformat check
-        continue-on-error: True
         run: |
           pipenv run black --check . --exclude 'migrations|manage.py'
-
-      - name: Run django test
-        run: |
-          pipenv run py.test
