--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -75,10 +75,7 @@ jobs:
 
       - name: Pylint check
         run: |
-          apps_names=$(find . -maxdepth 1  -name "*" -type d -not -name '.*')  
-          for i in $apps_names; do
-          pipenv run pylint $i
-          done
+          pipenv run pylint */
 
    black-check:
     runs-on: ubuntu-latest
