--- a/.pylintrc
+++ b/.pylintrc
@@ -14,6 +14,7 @@ ignore=
       CVS,
       templates,
       migrations,
+      docs,
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
