--- a/.pylintrc
+++ b/.pylintrc
@@ -15,6 +15,7 @@ ignore=
       templates,
       migrations,
       docs,
+      templates
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
