[ISS-118] create .env for test on github server
Signed-off-by: Hamilkar247 <adonnibal96@gmail.com>

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,6 +38,10 @@ jobs:
         run: |
           pipenv install --dev
 
+      - name: create .env
+        run: |
+          cp .env.example .env
+
       - name: Run django test
         run: |
           pipenv run py.test
