--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ exclude =
     venv
     .tox
     */migrations/*
+    bostardecksweb/test_settings.py
+    bostardecksweb/settings.py
 max-line-length = 88
 extend-ignore = E203, W503
 
@@ -29,6 +31,7 @@ skip =
     dist
     .tox
     .egg
+    bostardecksweb/test_settings.py
 multi_line_output = 3
 include_trailing_comma = True
 force_grid_wrap = 0
